--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 clap = "2.32.0"
 image = "0.20.1"
 rand = "0.6"
+regex = "1"
 reqwest = "0.9.5"
 serde = "1.0.80"
 serde_derive = "1.0.80"
