--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ name = "v2conv"
 path = "src/main.rs"
 
 [dependencies]
+base64 = "0.10.0"
+chrono = "0.4"
+chrono-tz = "0.5"
 clap = "2.32.0"
 image = "0.20.1"
 rand = "0.6"
